# Falling-Sand

./: .gitignore  CMakeLists.txt  README.md  debug.sh  release.sh  run.sh
headers/: color.h  element.h  grid.h  sand.h
src/: grid.cpp  main.cpp  sand.cpp
